--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/absharry/Html-template/issues"
   },
   "homepage": "https://github.com/absharry/Html-template#readme",
-  "dependencies": {},
+  "dependencies": {
+    "justeat-node": "0.0.3"
+  },
   "devDependencies": {
     "bootstrap": "^4.1.3",
     "gulp": "^4.0.0",
